# infrastructure-agent

./: .gitignore  AGENT_VERSION  BUNDLE_EULA.rtf  LICENSE  LICENSE_MICROSOFT_VCPP  LICENSING.md  Makefile  README.md  build_config.py  build_version.py  build_windows.bat  bundle_theme.xml  config_importer.py  constraints.txt  create_user.sh  infrastructure-agent.service.in  junit.xml  main.py  managefirewall.bat  pyproject.toml  requirements-lint.txt  requirements-test.txt  requirements.txt  returncodes.py  setup.cfg  setup.py  tox.ini  win_svce_config.py  win_svce_handler.py  win_wix.wxs  win_wix_bundle.wxs  win_wix_msi.wxs
agent/: agent.py  cachemanager.py  config.py  forwarderclient.py  helpers.py  logger.py  objects.py  patcher.py  poller.py  processmanager.py  scriptrunner.py  self_check.py  ssl_helper.py
cache/: aesencoder.py  cachemanagerhelper.py  exceptions.py  expirycache.py  lockingcache.py  stringtodict.py
cfg/: default_comment
cfg/platform_vars/: all.yml  linux.yml  windows.yml
docs/: linux-build.md  windows-build.md
nrpe/: packet.py  server.py
tests/: conftest.py
tests/agent/: conftest.py  test_agent.py  test_cachemanager.py  test_config.py  test_forwarderclient.py  test_helpers.py  test_logger.py  test_objects.py  test_patcher.py  test_poller.py  test_processmanager.py  test_scriptrunner.py  test_self_check.py  test_ssl_helper.py
tests/cache/: test_aesencoder.py  test_cachemanagerhelper.py  test_exceptions.py  test_expirycache.py  test_lockingcache.py
tests/nrpe/: test_nrpe_server.py  test_nrpev2_packet.py
vc_redist/: README
(+7 files in other folders)
