[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cxfreeze]
executables = [
    { script = "main.py", target_name = "infrastructure-agent", base = "console", copyright = "Copyright 2026 ITRS Group Ltd.", icon = "icon.ico" }
]

[tool.cxfreeze.build_exe]
excludes = ['asyncio', 'unittest', 'tkinter', 'test', 'mock']
